  _____ _    _ __  __  _____          
 / ____| |  | |  \/  |/ ____|   /\    
| |  __| |  | | \  / | |  __   /  \   
| | |_ | |  | | |\/| | | |_ | / /\ \  
| |__| | |__| | |  | | |__| |/ ____ \ 
 \_____|\____/|_|  |_|\_____/_/    \_\

=======================================
Framework Backend

1.2.17
 - Objetos criados em /api/voice
 - 

1.2.16
 - Integração com o reconhecimento de voz
 - Biblioteca para interpretação de linguagem natural


1.2.15
- GumgaSharedModel (Compartilhamento de objetos)
- MaximumUsersSharesExceeded


1.2.14
=======================================
- Create class GumgaTenancyUtils that contains the method changeOi
- System.out.println changed to Logger.log
- GumgaRevisionEntity passa a utilizar o sequence SEQREV e não mais o hibernate_sequence
- Added method in the class AbstractGumgaService methods gumgaOiForSearchWithWildCard and gumgaOiForSearch
- Created Class NoMultiTenancyException
- Route to whois changed to a non-plublic route.
- Método adicionado na interface ApiOperationTranslator para possibilitar traduções mais complexas baseadas no request
- Proxy para o reconhecimento facial com biletagem
- Proxy para o reconhecimento facial


1.2.13 and Before
=============
Not yet
