@@ -9,8 +9,9 @@
 Framework Backend
 
 1.2.17
+ - GumgaNamingStrategy implements NamingStrategy BETA!!!!
  - Objetos criados em /api/voice
- - 
+ - Mais informaçẽos no constraintViolation
 
 1.2.16
  - Integração com o reconhecimento de voz
